--- a/config.yaml
+++ b/config.yaml
@@ -11,7 +11,7 @@
 carpentry: 'incubator'
 
 # Overall title for pages.
-title: 'Magi\'s Cool New Lesson'
+title: 'Magis Cool New Lesson'
 
 # Date the lesson was created (YYYY-MM-DD, this is empty by default)
 created: 2023-02-22
